--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -6,11 +6,12 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="6dip"
+        android:layout_marginBottom="0dp"
         android:contentDescription="TODO"
         android:src="@mipmap/ic_launcher" />
 
