--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,24 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <item
+        android:id="@+id/show_favoris"
+        android:orderInCategory="100"
+        android:title="Favoris"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/show_global"
+        android:orderInCategory="100"
+        android:title="Global"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="100"
         android:title="Recherche"
+        app:showAsAction="always"
         app:actionViewClass="android.widget.SearchView" />
 </menu>
